--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -38,11 +38,14 @@
     </div>
   </section>
 
-  <!-- Categories Section -->
+  <!-- Categories -->
   <section class="categories">
     <h2>Categories</h2>
     <div class="category-cards">
-      <!-- Category cards will go here -->
+      <a href="web-development.html" class="category-card">Web Development</a>
+      <a href="#" class="category-card">AI/ML</a>
+      <a href="#" class="category-card">Cybersecurity</a>
+      <a href="#" class="category-card">IoT</a>
     </div>
   </section>
 
@@ -73,11 +76,11 @@
 
 <script src="script.js" defer></script></body>
 </html>
- -->
+
 
 <!-- --------------------------------- Fresh code : -------------------------------------------------------------- -->
 
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -126,3 +129,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+ -->
