--- a/index.html
+++ b/index.html
@@ -38,14 +38,11 @@
     </div>
   </section>
 
-  <!-- Categories -->
+   <!-- Categories Section -->
   <section class="categories">
     <h2>Categories</h2>
     <div class="category-cards">
-      <a href="web-development.html" class="category-card">Web Development</a>
-      <a href="#" class="category-card">AI/ML</a>
-      <a href="#" class="category-card">Cybersecurity</a>
-      <a href="#" class="category-card">IoT</a>
+      <!-- Category cards will go here -->
     </div>
   </section>
 
