--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -72,12 +72,12 @@
   </footer>
 
 <script src="script.js" defer></script></body>
-</html>
+</html> -->
 
 
 <!-- --------------------------------- Fresh code : -------------------------------------------------------------- -->
 
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -124,6 +124,87 @@
   </footer>
 
   <script src="script.js"></script>
+</body>
+</html>
+
+<!-- --------------------------------------------------------------------------------------------- -->
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Final Year Projects</title>
+  <link rel="stylesheet" href="styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <!-- Navbar -->
+  <nav>
+    <div class="logo">Final Year Projects</div>
+    <div class="search-bar">
+      <input type="text" placeholder="Search projects...">
+    </div>
+    <ul class="nav-links">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="projects.html">Projects</a></li>
+      <li><a href="#" id="categories-btn">Categories</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="contact.html">Contact Us</a></li>
+      <li><a href="login.html">Login/Register</a></li>
+    </ul>
+  </nav>
+
+  <!-- Hero Section -->
+  <section class="hero">
+    <h1>Affordable Software Projects for Students!</h1>
+  </section>
+
+  <!-- Trending Projects -->
+  <section class="trending-projects">
+    <h2>Trending Projects</h2>
+    <div class="project-cards">
+      <!-- Project cards will go here -->
+    </div>
+  </section>
+
+  <!-- Categories Section (Hidden Initially) -->
+  <section class="categories hidden" id="categories-section">
+    <h2>Categories</h2>
+    <div class="category-cards">
+      <a href="web-development.html" class="category-card">Web Development</a>
+      <a href="ai-ml.html" class="category-card">AI/ML</a>
+      <a href="cybersecurity.html" class="category-card">Cybersecurity</a>
+      <a href="iot.html" class="category-card">IoT</a>
+    </div>
+  </section>
+
+  <!-- Testimonials -->
+  <section class="testimonials">
+    <h2>What Our Students Say</h2>
+    <div class="testimonial-cards">
+      <!-- Testimonial cards will go here -->
+    </div>
+  </section>
+
+  <!-- Newsletter Signup -->
+  <section class="newsletter">
+    <h2>Stay Updated</h2>
+    <form>
+      <input type="email" placeholder="Enter your email">
+      <button type="submit">Subscribe</button>
+    </form>
+  </section>
+
+  <!-- Footer -->
+  <footer>
+    <p>&copy; 2025 Final Year Projects. All rights reserved.</p>
+    <div class="social-media">
+      <!-- Social Media Icons -->
+    </div>
+  </footer>
+
+  <script src="script.js" defer></script>
 </body>
 </html>
  -->
