--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="A platform for final year projects for CSE, ISE, AIML, Cybersecurity, EC students.">
+  <meta name="keywords" content="final year projects, CSE, ISE, AIML, Cybersecurity, EC, student projects">
+  <meta name="author" content="Your Name">
   <title>Final Year Projects</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -12,7 +15,7 @@
   <nav>
     <div class="logo">Final Year Projects</div>
     <div class="search-bar">
-      <input type="text" placeholder="Search projects...">
+      <input type="text" placeholder="Search projects..." aria-label="Search projects">
     </div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
@@ -60,7 +63,7 @@
   <section class="newsletter">
     <h2>Stay Updated</h2>
     <form>
-      <input type="email" placeholder="Enter your email">
+      <input type="email" placeholder="Enter your email" aria-label="Email address">
       <button type="submit">Subscribe</button>
     </form>
   </section>
