--- a/testimonials.html
+++ b/testimonials.html
@@ -1,7 +1,7 @@
 <section class="testimonials">
   <h2>What Our Students Say</h2>
   <div class="testimonial-slider">
-    <button class="prev-btn" aria-label="Previous testimonial">&#10094;</button>
+  <button class="prev-btn">Previous</button>
     <div class="testimonial-cards">
       <div class="testimonial-card">
         <p>"This website made my project selection so easy and affordable. Highly recommend it!"</p>
@@ -16,6 +16,6 @@
         <h3>- Emily Johnson</h3>
       </div>
     </div>
-    <button class="next-btn" aria-label="Next testimonial">&#10095;</button>
+    <button class="next-btn">Next</button>
   </div>
 </section>
