--- a/index.html
+++ b/index.html
@@ -53,9 +53,20 @@
 
   <!-- Testimonials -->
   <section class="testimonials">
-    <h2>What Our Students Say</h2>
-    <div class="testimonial-cards">
-      <!-- Testimonial cards will go here -->
+    <div class="testimonial-slider">
+     <div class="testimonial-cards">
+      <div class="testimonial-card">
+       <p>Testimonial 1</p>
+       <h3>Person 1</h3>
+      </div>
+      <div class="testimonial-card">
+        <p>Testimonial 2</p>
+        <h3>Person 2</h3>
+      </div>
+      <!-- Add more testimonial cards as needed -->
+     </div>
+     <button class="prev-btn" onclick="moveSlide(-1)">&#10094;</button>
+     <button class="next-btn" onclick="moveSlide(1)">&#10095;</button>
     </div>
   </section>
 
