--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="project-details.html">Projects</a></li>
-      <li><a href="#" id="categories-btn">Categories</a></li>
+      <li><a href="Categories.html" id="categories-btn">Categories</a></li>
       <li><a href="about.html">About Us</a></li>
       <li><a href="contact.html">Contact Us</a></li>
       <li><a href="login.html">Login/Register</a></li>
