--- a/Categories.html
+++ b/Categories.html
@@ -2,8 +2,11 @@
   <h2>Choose a Category</h2>
   <div class="category-cards">
     <a href="web-development.html" class="category-card">Web Development</a>
-    <a href="#" class="category-card">AI/ML</a>
-    <a href="#" class="category-card">Cybersecurity</a>
-    <a href="#" class="category-card">IoT</a>
+    <a href="ai-ml.html" class="category-card">AI/ML</a>
+    <a href="cybersecurity" class="category-card">Cybersecurity</a>
+    <a href="iot.html" class="category-card">IoT</a>
+    <a href="#" class="category-card">Computer Vision</a>
+    <a href="#" class="category-card">Blockchain</a>
+    <a href="#" class="category-card">Mini Project</a>
   </div>
 </section>
