--- a/web-development.html
+++ b/web-development.html
@@ -1,13 +1,36 @@
-<section class="projects">
-  <h2>Web Development Projects</h2>
-  <div class="project-cards">
-    <a href="project-details.html?project=Ecommerce Website" class="project-card">
-      <h3>E-commerce Website</h3>
-      <p>Price: $30</p>
-    </a>
-    <a href="project-details.html?project=Blog Website" class="project-card">
-      <h3>Blog Website</h3>
-      <p>Price: $20</p>
-    </a>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Web Development Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Web Development Projects</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="categories.html">Categories</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="projects">
+        <h2>Web Development Projects</h2>
+        <div class="project-cards">
+            <a href="project-details.html?project=ShoppingCartProject" class="project-card">
+                <h3>Shopping Cart Project (C Language)</h3>
+                <p>Develop a shopping cart system with sign-up, login, item search, and billing.</p>
+                <p><strong>Price:</strong> Rs 2000</p>
+            </a>
+            <a href="project-details.html?project=Blog Website" class="project-card">
+                <h3>Blog Website</h3>
+                <p>To be added in the project list soon</p>
+                <p>Price: --</p>
+            </a>
+        </div>
+    </section>
+</body>
+</html>
