--- a/web-development.html
+++ b/web-development.html
@@ -12,7 +12,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="categories.html">Categories</a></li>
+                <li><a href="Categories.html">Categories</a></li>
             </ul>
         </nav>
     </header>
