--- a/ai-ml.html
+++ b/ai-ml.html
@@ -1,13 +1,41 @@
-<section class="projects">
-  <h2>AI/ML Projects</h2>
-  <div class="project-cards">
-    <a href="project-details.html?project=Image Classification" class="project-card">
-      <h3>Image Classification</h3>
-      <p>Price: $50</p>
-    </a>
-    <a href="project-details.html?project=Voice Recognition" class="project-card">
-      <h3>Voice Recognition</h3>
-      <p>Price: $40</p>
-    </a>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>AI/ML Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>AI/ML Projects</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Categories.html">Categories</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="projects">
+        <h2>AI/ML Projects</h2>
+        <div class="project-cards">
+            <a href="project-details.html?project=DriverDrowsinessDetection" class="project-card">
+                <h3>Driver Drowsiness Detection - Python</h3>
+                <p>Detects drowsiness in drivers and provides alerts.</p>
+                <p><strong>Price:</strong> Rs 2000</p>
+            </a>
+            <a href="project-details.html?project=FaceRecognition" class="project-card">
+                <h3>Face & Eye Detection</h3>
+                <p>An implementation of face and eye detection using OpenCV Haar Cascade.</p>
+                <h4>Required Modules</h4>
+                <ul>
+                  <li>Numpy (pip install numpy)</li>
+                  <li>OpenCV (pip install opencv-python)</li>
+                </ul>
+                <p><strong>Price:</strong> Rs 2000</p>
+            </a>
+        </div>
+    </section>
+</body>
+</html>
