--- a/iot.html
+++ b/iot.html
@@ -1,13 +1,36 @@
-<section class="projects">
-  <h2>IoT Projects (Internet of Things)</h2>
-  <div class="project-cards">
-    <a href="project-details.html?project=Smart Home" class="project-card">
-      <h3>Smart Home</h3>
-      <p>Price: $70</p>
-    </a>
-    <a href="project-details.html?project=IoT Healthcare" class="project-card">
-      <h3>IoT Healthcare</h3>
-      <p>Price: $65</p>
-    </a>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>IoT Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>IoT Projects</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Categories.html">Categories</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="projects">
+        <h2>IoT Projects</h2>
+        <div class="project-cards">
+            <a href="project-details.html?project=Security-Camera-using-Laptop-Camera" class="project-card">
+                <h3>Security Camera using Laptop Camera</h3>
+                <p>Turn your PC into a security camera that captures images when a face is detected.</p>
+                <p><strong>Price:</strong> Rs 2000</p>
+            </a>
+            <a href="project-details.html?project=WeatherMonitoring" class="project-card">
+                <h3>Weather Monitoring System</h3>
+                <p>Monitor weather conditions using IoT sensors.</p>
+                <p><strong>Price:</strong> Rs 2500</p>
+            </a>
+        </div>
+    </section>
+</body>
+</html>
