--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -1,13 +1,41 @@
-<section class="projects">
-  <h2>Cybersecurity Projects</h2>
-  <div class="project-cards">
-    <a href="project-details.html?project=Network Security" class="project-card">
-      <h3>Network Security</h3>
-      <p>Price: $60</p>
-    </a>
-    <a href="project-details.html?project=Encryption Algorithm" class="project-card">
-      <h3>Encryption Algorithm</h3>
-      <p>Price: $45</p>
-    </a>
-  </div>
-</section>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cybersecurity Projects</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <header>
+        <h1>Cybersecurity Projects</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="Categories.html">Categories</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <section class="projects">
+        <h2>Cybersecurity Projects</h2>
+        <div class="project-cards">
+            <a href="project-details.html?project=Security-Camera-using-Laptop-Camera" class="project-card">
+                <h2>Security Camera using Laptop Camera</h2>
+                <p>Turn your PC into a security camera that captures images when a face is detected.</p>
+                <p><strong>Price:</strong> Rs 2000</p>
+            </a>
+            <a href="project-details.html?project=PhishingDetection" class="project-card">
+                <h3>Phishing Detection Tool</h3>
+                <p>A tool to identify phishing websites.</p>
+                <p><strong>Price:</strong>
+            </a>
+            <a href="project-details.html?project=IntrusionDetectionSystem" class="project-card">
+                <h3>Intrusion Detection System</h3>
+                <p>Detect unauthorized access to a network.</p>
+                <p><strong>Price:</strong> Rs 4000</p>
+            </a>
+          </div>
+    </section>
+</body>
+</html>
