--- a/cybersecurity.html
+++ b/cybersecurity.html
@@ -28,7 +28,7 @@
             <a href="project-details.html?project=PhishingDetection" class="project-card">
                 <h3>Phishing Detection Tool</h3>
                 <p>A tool to identify phishing websites.</p>
-                <p><strong>Price:</strong>
+                <p><strong>Price:</strong></p>
             </a>
             <a href="project-details.html?project=IntrusionDetectionSystem" class="project-card">
                 <h3>Intrusion Detection System</h3>
