--- a/Categories.html
+++ b/Categories.html
@@ -1,12 +1,16 @@
 <section class="categories">
   <h2>Choose a Category</h2>
   <div class="category-cards">
-    <a href="web-development.html" class="category-card">Web Development</a>
-    <a href="ai-ml.html" class="category-card">AI/ML</a>
-    <a href="cybersecurity" class="category-card">Cybersecurity</a>
-    <a href="iot.html" class="category-card">IoT</a>
-    <a href="#" class="category-card">Computer Vision</a>
-    <a href="#" class="category-card">Blockchain</a>
-    <a href="#" class="category-card">Mini Project</a>
+    <nav>
+      <ul>           
+      <li><a href="web-development.html" class="category-card">Web Development</a></li>
+      <li><a href="ai-ml.html" class="category-card">AI/ML</a></li>
+      <li><a href="cybersecurity" class="category-card">Cybersecurity</a></li>
+      <li><a href="iot.html" class="category-card">IoT</a></li>
+      <li><a href="#" class="category-card">Computer Vision</a></li>
+      <li><a href="#" class="category-card">Blockchain</a></li>
+      <li><a href="#" class="category-card">Mini Project</a></li>
+     </ul>
+    </nav>
   </div>
 </section>
