--- a/Categories.html
+++ b/Categories.html
@@ -9,7 +9,7 @@
       <li><a href="iot.html" class="category-card">IoT</a></li>
       <li><a href="#" class="category-card">Computer Vision</a></li>
       <li><a href="#" class="category-card">Blockchain</a></li>
-      <li><a href="#" class="category-card">Mini Project</a></li>
+      <li><a href="mini-project.html" class="category-card">Mini Project</a></li>
      </ul>
     </nav>
   </div>
