--- a/Categories.html
+++ b/Categories.html
@@ -1,3 +1,11 @@
+<header>
+        <h1>Categories</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+            </ul>
+        </nav>
+</header>
 <section class="categories">
   <h2>Choose a Category</h2>
   <div class="category-cards">
